--- a/web/css/bootstrap.css
+++ b/web/css/bootstrap.css
@@ -288,7 +288,7 @@ a:hover {
 .navbar-static-top .container,
 .navbar-fixed-top .container,
 .navbar-fixed-bottom .container {
-  width: 940px;
+  width: 100px;
 }
 
 .span12 {
@@ -4290,7 +4290,7 @@ input[type="submit"].btn.btn-mini {
 .navbar {
   *position: relative;
   *z-index: 2;
-  margin-bottom: 20px;
+ /* margin-bottom: 20px;*/
   overflow: visible;
 }
 
@@ -4306,9 +4306,11 @@ input[type="submit"].btn.btn-mini {
   background-image: linear-gradient(to bottom, #ffffff, #f2f2f2);
   background-repeat: repeat-x;
   border: 1px solid #d4d4d4;
+  /*
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
+          */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff2f2f2', GradientType=0);
   *zoom: 1;
   -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
