--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -29,6 +29,27 @@ header {
 	height: 100px;
 }
 
+/* footer */
+footer {
+    margin-top: 25px;
+    padding: 25px 0 50px 0;
+    background: #1C263C;
+    width: 100%;
+    opacity:0.7;
+    filter:alpha(opacity=70); /* For IE8 and earlier */
+}
+
+#footer_info {
+    width:  1000px;
+    margin: 0 auto 0 auto;
+    opacity:1;
+    filter:alpha(opacity=100); /* For IE8 and earlier */
+}
+
+#footer_extrapadding {
+    margin-left: 15px;
+    margin-right: 15px;
+}
 
 /* content */
 h2 {
