--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,15 +1,14 @@
-
-
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
 body {
-	background: url("../img/bg-main.jpg") fixed bottom;
+    background: url("../img/bg-main.jpg") fixed bottom;
     color: #D4D4D4;
 }
+
 #container {
-	width: 1000px;
-	margin: 0 auto 0 auto;
+    width: 1000px;
+    margin: 0 auto 0 auto;
 }
 
 /* general */
@@ -18,6 +17,7 @@ body {
     float: right;
     margin-left: 15px;
 }
+
 .fieldsnothere {
     float: left;
 }
@@ -25,21 +25,22 @@ body {
 /* header */
 
 header {
-	width: 1000px;
+    width: 1000px;
 }
 
 #header_login_form {
-	padding: 5px 10px 0px 10px;
+    padding: 5px 10px 0px 10px;
 }
-
 
 #header_banner {
-	width: 1000px;
-	height: 150px;
+    width: 1000px;
+    height: 150px;
 }
+
 #header_nav_login {
     padding: 0 10px 0 10px;
 }
+
 #header_nav_login_btn {
     text-align: center;
 }
@@ -51,15 +52,15 @@ footer {
     padding: 25px 0 50px 0;
     background: #1C263C;
     width: 100%;
-    opacity:0.7;
-    filter:alpha(opacity=70); /* For IE8 and earlier */
+    opacity: 0.7;
+    filter: alpha(opacity = 70); /* For IE8 and earlier */
 }
 
 #footer_info {
-    width:  1000px;
+    width: 1000px;
     margin: 0 auto 0 auto;
-    opacity:1;
-    filter:alpha(opacity=100); /* For IE8 and earlier */
+    opacity: 1;
+    filter: alpha(opacity = 100); /* For IE8 and earlier */
 }
 
 #footer_extrapadding {
@@ -78,10 +79,10 @@ h4 {
 }
 
 #content {
-	margin: 0 auto 0 auto;
-	/*border-radius: 5px;*/
-	background: #1C263C;
-	padding: 25px;
+    margin: 0 auto 0 auto;
+    /*border-radius: 5px;*/
+    background: #1C263C;
+    padding: 25px;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
 }
@@ -106,16 +107,14 @@ label {
     cursor: text;
 }
 
-
-
 /* trips */
 
-
 .trip_list {
-     list-style: none;
+    list-style: none;
 }
+
 .trip_details {
-   /* height: 100px;  */
+    /* height: 100px;  */
     background: #455268;
     margin: 10px 15px 10px 15px;
     padding: 15px;
@@ -131,6 +130,7 @@ label {
 .trip_name {
     margin-bottom: 7px;
 }
+
 a.trip_name {
     font-weight: bold;
     font-size: 15pt;
@@ -141,6 +141,7 @@ a.trip_name {
 a.trip_name:hover {
     color: #64A600;
 }
+
 .trip_extra {
     margin-top: 15px;
 }
@@ -152,12 +153,13 @@ a.trip_name:hover {
 .trip_detail_general {
     font-weight: bold;;
 }
+
 .float_fix {
     clear: left;
 }
 
 .pagination {
-     text-align: center;
+    text-align: center;
 }
 
 /* trip detailview */
@@ -165,7 +167,6 @@ a.trip_name:hover {
 #trip_detailview_adminbtn {
     float: right;
 }
-
 
 /* profile */
 
@@ -225,4 +226,59 @@ a.trip_name:hover {
 
 #languageTable {
     margin-top: 1.25em;
+}
+
+/* labels */
+
+.formLabels1 {
+    margin-top: 0.5em;
+    font-size: 1.2em;
+    font-weight: bold;
+    color: #9CFF00;
+}
+
+.formLabels2 {
+    font-size: 1.2em;
+}
+
+.formView {
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 1em;
+}
+
+.formTrip {
+    color: #9CFF00;
+    font-size: 2em;
+    font-weight: bold;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
+
+.formTable {
+    width: 100%;
+    text-align: left;
+}
+
+.formColumns {
+    width: 25%;
+}
+
+.formButton {
+    background-color: #D4D4D4;
+    color: #1C263C;
+
+    border-radius: 0.5em;
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 0.4em;
+    padding-left: 3em;
+    padding-right: 3em;
+}
+
+.formButton:hover {
+    background-color: #BDBBBB;
+
+    color: #D4D4D4;
+
 }
