some more  validation

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -361,3 +361,13 @@ a.trip_name:hover {
 
 }
 
+
+/* registration */
+
+#registration_failed {
+    visibility: hidden;
+    border: 1px solid red;
+    background: #F57676;
+    color: black;
+    padding: 20px 15px 10px 15px;
+}
