--- a/src/main/webapp/css/bootstrap.css
+++ b/src/main/webapp/css/bootstrap.css
@@ -1920,9 +1920,10 @@ legend + .control-group {
 }
 
 .form-horizontal .control-group {
-  margin-bottom: 20px;
+  margin-bottom: 7px;   /* default is 20 */
   *zoom: 1;
 }
+
 
 .form-horizontal .control-group:before,
 .form-horizontal .control-group:after {
