--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -375,8 +375,7 @@ a.trip_name:hover {
 
 /* trip overzicht */
 
-
-/*#addTripButton {
+#addTripButton {
     background-color: #D4D4D4;
     color: #1C263C;
 
