--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -130,9 +130,6 @@ label {
 }
 
 /* trips */
-
-
-
 .trip_list {
     list-style: none;
 }
@@ -192,6 +189,11 @@ a.trip_name:hover {
     float: right;
 }
 
+/* trip add */
+
+.add_trip_div {
+    visibility: hidden;
+}
 /* profile */
 
 .hidethis {
