--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -38,6 +38,24 @@ body {
     margin-bottom: 25px;
 }
 
+#validation_failed2 {
+    display: none;
+    border: 2px solid red;
+    background: #F57676;
+    color: black;
+    padding: 20px 15px 10px 15px;
+    margin-bottom: 25px;
+}
+
+#validation_succeeded {
+    display: none;
+    border: 2px solid green;
+    background: #76F5B6;
+    color: black;
+    padding: 20px 15px 10px 15px;
+    margin-bottom: 25px;
+}
+
 /* header */
 
 header {
@@ -398,6 +416,12 @@ a.trip_name:hover {
     height: 400px;
 }
 
+#map_canvas3 {
+    margin-left: 20px;
+    width: 525px;
+    height: 400px;
+}
+
 #links {
     float: left;
     width: 35%;
@@ -425,20 +449,6 @@ a.trip_name:hover {
 #onder {
     clear: both;
 }
-/*
-#searchKnop {
-    background-color: #D4D4D4;
-    color: #1C263C;
-
-    border-radius: 0.5em;
-    font-size: 1em;
-    font-weight: bold;
-    padding: 0.2em;
-    padding-left: 2em;
-    padding-right: 2em;
-    margin-bottom: 0.8em;
-    margin-left: 0.25em;
-}  */
 
 #mapTopTable {
     width: 70%;
@@ -469,3 +479,11 @@ a.trip_name:hover {
     margin-bottom: 1em;
 }
 
+#mapCheckIcon {
+    cursor: pointer;
+}
+
+#stopPlaatsInfo {
+    min-width: 17.5em;
+    min-height: 7.5em;
+}
