--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -527,3 +527,14 @@ a.trip_name:hover {
     width: 100%;
 }
 
+#viewTheTrip {
+   margin-bottom: 0.5em;
+    margin-top: 0.5em;
+    font-size: 0.8em;
+}
+
+#viewTheTripLink {
+
+    color: blue;
+
+}
