--- a/src/main/webapp/css/bootstrap.css
+++ b/src/main/webapp/css/bootstrap.css
@@ -1021,7 +1021,7 @@ legend {
   margin-bottom: 20px;
   font-size: 21px;
   line-height: 40px;
-  color: #333333;
+  color:  #B4FF40;
   border: 0;
   border-bottom: 1px solid #e5e5e5;
 }
