--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -749,3 +749,37 @@ th.costs2 {
     -moz-border-top-right-radius: 0.5em;
     border-top-right-radius: 0.5em;
 }
+
+/* chat */
+#chat {
+    margin: 0 auto 0 auto;
+    text-align: center;
+}
+.input-append {
+    margin-top: 15px;
+}
+
+#chat-area {
+    overflow : auto;
+    width: 580px;
+    height: 250px;
+    max-height: 250px;
+    margin: 0 auto 0 auto;
+    text-align: left;
+    /*padding: 0 15px 0 15px;  */
+
+    /*-webkit-border-radius: 0.5em;
+    -khtml-border-radius: 0.5em;
+    -moz-border-radius: 0.5em;
+    border-radius: 0.5em;*/
+}
+.messages {
+    border-top: 1px white solid;
+    padding: 7px 15px 7px 15px;
+}
+
+.chat-date {
+    text-align: right;
+    font-size: 8pt;
+    float: right;
+}
