--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -804,3 +804,54 @@ th.costs2 {
     font-size: 8pt;
     float: right;
 }
+
+/* broadcast */
+
+#broadcastMsg {
+    resize: none;
+    width: 95%;
+    min-height: 50px;
+    margin-bottom: 1em;
+}
+
+.broadcastMsgTitle {
+    text-align: left;
+}
+
+.broadcastMsgTable {
+    width: 100%;
+}
+
+#broadcastMsgScroll {
+    height: 275px;
+    overflow: auto;
+}
+
+.broadcastMsgCol1 {
+    width: 20%;
+    vertical-align: top;
+}
+
+.broadcastMsgCol2 {
+    width: 75%;
+}
+
+#addBroadcastMessage {
+    width: 90%;
+}
+
+.form-horizontal2 {
+    margin: 0.5em;
+}
+
+#broadcastMsgRow {
+    height: 0.1em;
+}
+
+#broadcastMsgRow0 {
+    background: #455268;
+}
+
+#broadcastMsgRow1 {
+    background-color: #696969;
+}
