updated updates stopping point

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -606,6 +606,10 @@ a.trip_name:hover {
     min-height: 7.5em;
 }
 
+#stopplaatsen-extra {
+    margin-top: 15px;
+}
+
 /* admin trip */
 
 #adminTripTable {
